# doc

./: .dccache  .envrc  .gitbook.yaml  .gitignore  .tool-versions  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SUMMARY.md  _sidebar.md  about.md  access.md  alerts.md  appconf.md  application.md  book.json  build.sh  changelog.md  contracts.md  deploy.md  deployment.md  docker-compose.yaml  flake.nix  gettingstarted.md  go.mod  index.html  kubernetes.md  logging.md  main.py  metrics.md  mise.toml  mkdocs.yml  nais.yaml.md  naiscaper.md  naisd.md  naislogd.md  overview.md  (+8 more)
.github/: copilot-instructions.md  dependabot.yml
addons/: README.md  antivirus.md  azure-ad.md  idporten.md  kafka.md  kubernetes-dashboard.md  leader-election.md  naisjobs.md  oauth-flow.md  oauth2-openidconnect.md  objectstore.md  redis.md  secrets.md  tokendings.md  tokenx.md  velero-backup-and-restore.md  volume-storage.md
appendices/: README.md
appendix/: README.md  ingress-dns.md  zero-trust.md
basics/: README.md  access.md  application.md  clusters.md  deploy.md  teams.md
charts/: Chart.yaml  Feature.yaml  values.yaml
clusters/: README.md  gcp.md  laws-and-regulations.md  migrating-databases-to-gcp.md  migrating-to-gcp.md  nais-application.md  on-premises.md  team-namespaces.md
content/: about.md  alerts.md  changelog.md  clusters.md  fasit_resources.md  iam.md  ingress.md  kubectl_examples.md  kubernetes_dashboard.md  leader_election.md  naisapp.md  nexus.md  operations.md  redis.md  secrets.md  storage.md  trafficrouting.md
contracts/: README.md  alerts.md  am.md  leader_election.md  leader_election.yaml  logging.md  manifest.md  metrics.md  redis.md
custom_theme_overrides/: 404.html  main.html
deployment/: README.md  advanced-usage.md  change-team.md  circleci.md  deploy.md  deployment-cli.md  manual.md  troubleshooting.md
dev-guide/: README.md  getting_started.md  kubectl_examples.md  kubernetes_dashboard.md  migration.md  naisd.md  nav_proxy.md  nexus.md  quickstart.md  service_discovery.md
device/: README.md  install.md  (+2 more)
(+1147 files in other folders)
