[tool.poetry]
name = "doc"
version = "0.1.0"
description = "nais developer documentation"
authors = []
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
Pygments = "^2.18.0"
pymdown-extensions = "^10.14"
mkdocs-material = "^9.6.7"
mkdocs-git-revision-date-localized-plugin = "^1.4.2"
mkdocs-redirects = "^1.2.2"
mkdocs-git-committers-plugin-2 = "^2.5.0"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-file-filter-plugin = "^0.2.0"
mkdocs-swagger-ui-tag = "^0.6.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
