[tool.poetry]
name = "doc"
version = "0.1.0"
description = "nais developer documentation"
authors = []
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
Pygments = "^2.18.0"
pymdown-extensions = "^10.15"
mkdocs-material = "^9.6.14"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-redirects = "^1.2.2"
mkdocs-git-committers-plugin-2 = "^2.5.0"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-file-filter-plugin = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
